added nav, sass variables, linked js and css, added main to html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Laneikka Denne - Artist</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Yellowtail&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <header>
+        <h1 class="header"><a href="/index">Laneikka Denne</a></h1>
+        <nav>
+            <ul class="nav__list">
+                <li class="nav__list--item"><a class="nav__list--link" href="/works">Work</a></li>
+                <li class="nav__list--item"><a class="nav__list--link" href="/bio">Bio</a></li>
+                <li class="nav__list--item"><a class="nav__list--link" href="/contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
     
+
+    <main>
+        <div class="wrapper">
+            <section>
+                <!-- slick slider of her work -->
+                <img src="https://picsum.photos/id/1014/1130/400" alt="">
+            </section>
+
+            <section>
+                <!-- two imgs in this section one links to bio one links to works -->
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, nisi dolores. Tempora eius unde quas ab enim ipsam! Quia delectus esse aut blanditiis nesciunt reiciendis ullam, aliquam facilis numquam commodi?</p>
+            </section>
+        </div>
+    </main>
+   
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
