--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Laneikka Denne - Artist</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Yellowtail&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Beth+Ellen|Roboto:300,400,900|Yellowtail&display=swap" rel="stylesheet">    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header>
