added styles for header on mobile and desktop

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <header>
-        <h1 class="heading"><a href="index.html">Laneikka Denne</a></h1>
+    <header class="header">
+        <h1 class="heading heading--mobile"><a href="index.html">Laneikka Denne</a></h1>
         <div class="header__hamburger">
             <div class="header__hamburger--line"></div>
             <div class="header__hamburger--line"></div>
@@ -21,6 +21,7 @@
         </div>
 
         <div class="header__wrapper">
+            <h1 class="heading heading--desktop"><a href="index.html">Laneikka Denne</a></h1>
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__list--item"><a class="nav__list--link" href="bio.html">Bio</a></li>
@@ -55,8 +56,10 @@
             <section class="hero-slider">
 
                 <div class="hero-carousel">
-                    <div class="hero-carousel__item" style="background-image:url(images/bloom.jpg);"></div>
-                    <div class="hero-carousel__item" style="background-image:url(https://res.cloudinary.com/ellijayne/image/upload/v1591148223/laneikka-site/laneikka-pink.jpg);"></div>
+                    <div class="hero-carousel__item" style="background-image:url(images/1-bleue-set.jpg);"></div>
+                    <div class="hero-carousel__item" style="background-image:url(images/1-rose-set.jpg);"></div>
+                    <div class="hero-carousel__item" style="background-image:url(images/1-rouge-set.jpg);"></div>
+                    <!-- <div class="hero-carousel__item" style="background-image:url(images/bloom.jpg);"></div>.jpg);"></div>
                     <div class="hero-carousel__item" style="background-image:url(images/poke.jpg);"></div>
                     <div class="hero-carousel__item" style="background-image:url(images/fruitful.jpg);"></div>
                     <div class="hero-carousel__item" style="background-image:url(images/ireallylikeher.jpg);"></div>
@@ -64,7 +67,7 @@
                     <div class="hero-carousel__item" style="background-image:url(images/scrunch.jpg);"></div>
                     <div class="hero-carousel__item" style="background-image:url(images/somethinginmyknickers.jpg);"></div>
                     <div class="hero-carousel__item" style="background-image:url(images/tears.jpg);"></div>
-                    <div class="hero-carousel__item" style="background-image:url(images/valarie.jpg);"></div>
+                    <div class="hero-carousel__item" style="background-image:url(images/valarie.jpg);"></div> -->
                     
         
                 </div>
