added back in tab logo

--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
                     <li class="nav__list--item"><a class="nav__list--link" href="contact.html">Contact</a></li>
                 </ul>
             </nav>
-            <footer class="footer">
-                <div class="footer__upper">
-                    <ul class="footer__list">
-                        <li class="footer__list--item"><a class="footer__list--link" href="mailto:laneikkadenne@hotmail.com"><i class="far fa-envelope"></i></a></li>
-                        <li class="footer__list--item"><a class="footer__list--link" href="https://www.instagram.com/laneikka/"><i class="fab fa-instagram"></i></a></li>
-                        <li class="footer__list--item"><a class="footer__list--link" href="https://www.depop.com/laneikka/"><i class="fas fa-store"></i></a></li>
+            <footer class="nav-footer">
+                <div class="nav-footer__upper">
+                    <ul class="nav-footer__list">
+                        <li class="nav-footer__list--item"><a class="nav-footer__list--link" href="mailto:laneikkadenne@hotmail.com"><i class="far fa-envelope"></i></a></li>
+                        <li class="nav-footer__list--item"><a class="nav-footer__list--link" href="https://www.instagram.com/laneikka/"><i class="fab fa-instagram"></i></a></li>
+                        <li class="nav-footer__list--item"><a class="nav-footer__list--link" href="https://www.depop.com/laneikka/"><i class="fas fa-store"></i></a></li>
                     </ul>
                 </div>
-                <div class="footer__lower">
-                    <p class="footer__note">© COPYRIGHT 2020 Laneikka Denne</p>
-                    <p class="footer__note">Site by <a href="https://www.linkedin.com/in/ej-willard/">EJ Willard</a></p>
+                <div class="nav-footer__lower">
+                    <p class="nav-footer__note">© COPYRIGHT 2020 Laneikka Denne</p>
+                    <p class="nav-footer__note">Site by <a href="https://www.linkedin.com/in/ej-willard/">EJ Willard</a></p>
                 </div>
             </footer>
         </div>
