moved all img links to cloudinary links, added art page with flexbox display of work

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <ul class="nav__list">
                     <li class="nav__list--item"><a class="nav__list--link" href="bio.html">Bio</a></li>
                     <li class="nav__list--item"><a class="nav__list--link" href="work.html">Actor</a></li>
-                    <li class="nav__list--item"><a class="nav__list--link" href="work.html">Art</a></li>
+                    <li class="nav__list--item"><a class="nav__list--link" href="art.html">Art</a></li>
                     <li class="nav__list--item"><a class="nav__list--link" href="work.html">Writing</a></li>
                     <li class="nav__list--item"><a class="nav__list--link" href="work.html">Film</a></li>
                     <li class="nav__list--item"><a class="nav__list--link" href="work.html">Fashion</a></li>
@@ -56,9 +56,9 @@
             <section class="hero-slider">
 
                 <div class="hero-carousel">
-                    <div class="hero-carousel__item" style="background-image:url(images/1-bleue-set.jpg);"></div>
-                    <div class="hero-carousel__item" style="background-image:url(images/1-rose-set.jpg);"></div>
-                    <div class="hero-carousel__item" style="background-image:url(images/1-rouge-set.jpg);"></div>
+                    <div class="hero-carousel__item" style="background-image:url(https://res.cloudinary.com/ellijayne/image/upload/v1593587910/laneikka-site/1-bleue-set.jpg);"></div>
+                    <div class="hero-carousel__item" style="background-image:url(https://res.cloudinary.com/ellijayne/image/upload/v1593587905/laneikka-site/1-rose-set.jpg);"></div>
+                    <div class="hero-carousel__item" style="background-image:url(https://res.cloudinary.com/ellijayne/image/upload/v1593587905/laneikka-site/1-rouge-set.jpg);"></div>
                     <!-- <div class="hero-carousel__item" style="background-image:url(images/bloom.jpg);"></div>.jpg);"></div>
                     <div class="hero-carousel__item" style="background-image:url(images/poke.jpg);"></div>
                     <div class="hero-carousel__item" style="background-image:url(images/fruitful.jpg);"></div>
